styles.css
@import url("https://fonts.googleapis.com/css2?family=Alata&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@100&display=swap");

:root {
  --white: hsl(0, 0%, 100%);
  --Black: hsl(0, 0%, 0%);
  --Dark-Gray: hsl(0, 0%, 55%);
  --Very-Dark-Gray: hsl(0, 0%, 41%);

  --paragraph-font: "Alata", sans-serif;
  --header-font: "Josefin Sans", sans-serif;
}
.attribution {
  font-size: 11px;
  text-align: center;
  color: white;
}
.attribution a {
  color: var(--Dark-Gray);
}
html,
*,
*::before,
*::after {
  margin: 0;
  box-sizing: border-box;
  scroll-behavior: smooth;
  overflow-x: hidden;
}
body {
  font-size: 15px;
}

header {
  background-image: url(./images/mobile/image-hero.jpg);
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  height: 850px;
  width: 100%;
  position: relative;
}

li {
  list-style: none;
  color: var(--white);
  font-family: var(--paragraph-font);
}

a {
  text-decoration: none;
  color: var(--white);
  cursor: pointer;
}

button {
  display: none;
}
h1,
h2 {
  font-family: var(--header-font);
}

p {
  font-family: var(--paragraph-font);
  color: var(--Dark-Gray);
  max-width: 650px;
  line-height: 2;
}

a::after {
  display: block;
  width: 100%;
  content: "";
  border-bottom: solid 1px white;
  transform: scaleX(0);
  transition: transform 0.3s ease-in-out;
}

a:hover::after {
  transform: scaleX(1);
}

.header-fonts {
  font-family: var(--header-font);
  text-transform: uppercase;
  font-size: 2.5rem;
  max-width: 500px;
  margin-top: 2rem;
}
/* ======================MOBILE MENU========================== */
.mobile-menu {
  visibility: hidden;
  width: 100%;
  height: 100%;
  background-color: black;
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  transition: all 0.5s ease-out;
  -webkit-transition: all 0.5s ease-in-out;
  -moz-transition: all 0.5s ease-in-out;
  -ms-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
}
.mobile-options {
  position: relative;
  top: 30%;
  left: 3%;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  justify-content: center;
  text-transform: uppercase;
}

.mobile-options li {
  margin-right: auto;
}

.mobile-options li > a {
  font-family: var(--header-font);
  font-size: 2rem;
}

.fade {
  opacity: 1;
  visibility: visible;
}

/* =============================================================== */
nav {
  display: none;
}

.title-page {
  padding: 0 1rem;
  border: 2px solid white;
  margin-top: 15rem;
  margin-left: 0.5rem;
  max-width: 600px;
}
h1 {
  color: var(--white);
  text-transform: uppercase;
  font-size: 1.8rem;
  letter-spacing: 3px;
  padding: 2rem 1rem;
  max-width: 400px;
  text-align: left;
}

.nav-wrapper {
  display: flex;
  position: relative;
  width: 100%;
  align-items: center;
  justify-content: space-between;
  padding-top: 1rem;
}

.ham {
  width: 75px;
  padding: 1rem 1rem;
  position: relative;
  z-index: 200;
}

.logo {
  width: 192px;
  padding: 1rem 1rem;
  position: relative;
  z-index: 3;
}

.middle-container {
  min-height: 600px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: center;
  margin-top: 5rem;
}
.middle-container img {
  max-width: 100%;
  min-width: 500px;
  height: auto;
  padding: 0 5em;
}

.description-text {
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-items: center;
  margin-top: 5rem;
  min-width: 20ch;
}
.description-text p {
  margin: 2.5em 0;
  padding: 0 3rem;
}
.creations-heading {
  display: flex;
  justify-content: center;
}
.creation-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 0 3em;
}

.creation-images {
  position: relative;
  margin-top: 1.5em;
  max-width: 100%;
}

.creation-images img {
  filter: brightness(0.7);
  max-width: 100%;
}
.creation-wrapper a {
  max-width: 9ch;
  position: absolute;
  height: 65px;
  font-size: 1.5rem;
  left: 20px;
  bottom: 30%;
  top: 30%;
  overflow: hidden;
}

.see-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin: 5rem 0;
}

.see-more {
  padding: 1rem 4rem;
  font-size: 1.5rem;
  font-family: var(--paragraph-font);
  border: 2px black solid;
  color: var(--Black);
  text-transform: uppercase;
  letter-spacing: 5px;
}

.see-more:hover {
  background-color: black;
  color: white;
}

footer {
  background-color: var(--Black);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  gap: 1.3rem;
  padding-top: 3rem;
}
.social-media {
  position: relative;
  display: flex;
  gap: 1rem;
}

.footer-text {
  position: relative;
}

.footer-text li {
  padding: 1em;
  margin-top: 3px;
}

@media (min-width: 950px) {
  header {
    background-image: url("./images/desktop/image-hero.jpg");
    padding: 0 3rem;
  }
  h1 {
    font-size: 2.5em;
  }
  .ham {
    display: none;
  }
  nav {
    display: flex;
    flex-basis: 100%;
    width: 100%;
    justify-content: flex-end;
  }
  .nav-options {
    display: flex;
  }

  .nav-options li {
    max-width: 100px;
  }

  a {
    position: relative;
  }

  a::after {
    position: absolute;
    height: 2px;
    width: 100%;
    bottom: 0;
    left: 0;
    content: "";
    border-bottom: solid 1px white;
    transform: scaleX(0);
    transition: transform 0.3s ease-in-out;
  }
  a:hover::after {
    transform: scaleX(1);
  }

  li {
    width: 10rem;
  }

  .middle-container {
    flex-direction: row;
    justify-content: center;
    align-items: center;
    position: relative;
    margin-bottom: 10rem;
  }

  .middle-container img {
    position: relative;
    left: 50px;
    top: 10px;
    clip-path: polygon(
      100% 0,
      100% 42%,
      75% 42%,
      75% 100%,
      0 100%,
      0% 60%,
      0 0
    );
    padding: 0;
  }
  .description-text {
    position: relative;
    right: 80px;
    top: 100px;
    width: 600px;
    font-size: 1rem;
    text-align: left;
  }

  .middle-wrapper {
    width: 100%;
    display: flex;
    justify-content: space-evenly;
    gap: 15rem;
  }

  button {
    background-color: black; /* Green */
    border: none;
    color: white;
    padding: 0.5rem 2rem;
    text-align: center;
    text-decoration: none;
    font-size: 16px;
    cursor: pointer;
    display: block;
    font-family: var(--header-font);
    text-transform: uppercase;
    filter: brightness(1.5);
  }

  button:hover {
    background-color: var(--Dark-Gray);
    color: black;
    font-weight: bold;
  }
  .creation-wrapper {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    width: 65%;
    margin: 0 auto;
    gap: 1em;
  }

  .creation-images {
    max-width: 256px;
  }

  .creation-wrapper a {
    max-width: 220px;
    position: absolute;
    font-size: 2vw;
    /* height: 100px; */
    margin: 0 auto;
    top: 70%;
    bottom: 0;
    min-width: 25%;
    overflow: hidden;
  }

  picture img {
    max-width: 100%;
    min-height: 100px;
    object-fit: cover;
  }

  footer {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr;
    padding-bottom: 2rem;
  }
  .social-media {
    grid-row: 1;
    width: 500px;
    gap: 30px;
    margin: 0 auto;
  }
  .footer-options {
    grid-row: 1;
    display: inline-flex;
  }
  .footer-options li {
    width: 90px;
  }
  .footer-logos {
    grid-row: 1;
    display: flex;
    justify-content: center;
  }

  main {
    margin-bottom: 15rem;
  }

  .see-container {
    display: none;
  }
  .fade {
    opacity: 0;
    visibility: hidden;
  }

  /* .footer-options li > a::after {
    cursor: pointer;
    position: absolute;
    height: 2px;
    width: 100%;
    bottom: 0;
    left: 0;
    content: "";
    border-bottom: solid 1px white;
    transform: scaleX(0);
    transition: transform 0.3s ease-in-out;
  }

  .footer-options li > a:hover::after {
    transform: scaleX(1);
  } */
}

@media (max-width: 280px) {
  h1 {
    font-size: 0.9rem;
  }
}

